--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
         <meta name="description" content="Task Manager where you can create, edit and delete a task">
         <meta name="keywords" content="Task Manager, Web app, website, HTML, HTML5, CSS, CSS3, 
         JavaScript, Responsive Design, HTML, CSS and JavaScript Template, Awesome Layout">
-        <meta name="author" content="Ahmed Maher">
-        <meta name="copyright" content="2024, Ahmed Maher">
+        <meta name="author" content="Dunder Mifflin Team">
+        <meta name="copyright" content="Dunder Mifflin Team 2024">
         <meta name="robots" content="index, follow">
         <!-- Media Queries -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do App / Task Manager</title>
         <!-- Page Logo -->
         <link rel="icon" type="image/icon" href="images.jpg">
+        
         <!-- Font Awesome Library -->
         <link rel="stylesheet" href="CSS/all.min.css">
+
         <!-- Main CSS File -->
         <link rel="stylesheet" href="CSS/style.css">
     </head>
@@ -44,7 +46,8 @@
             <div class="container">
                 <p>
                     Copyright &copy; <span id="copyright-year"></span>
-                    Developed By <a href="https://www.linkedin.com/in/ahmed-maher-algohary" title="About Developer" target="_blank">Ahmed Maher</a>
+                    <!-- Developed By <a href="https://www.linkedin.com/in/ahmed-maher-algohary" title="About Developer" target="_blank">Ahmed Maher</a> -->
+                    Developed By <a href="https://www.linkedin.com/in/ahmed-maher-algohary" title="About Developer" target="_blank">Dunder Mifflin Team</a>
                 </p>
                 <span>All Rights Reserved</span>
             </div>
