modified: the project folder struture + [add task] button styles

--- a/index.html
+++ b/index.html
@@ -220,6 +220,6 @@
 		</footer>
 
 		<!-- Main JS File -->
-		<script src="main.js"></script>
+		<script src="JS/main.js"></script>
 	</body>
 </html>
